fix background color problems on mobile

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -2,6 +2,7 @@ $title-color: #fff !default
 $title-strong-color: #fff
 $content-heading-color: white
 $label-color: white
+$navbar-background-color: #434343
 
 @import "~bulma/sass/utilities/initial-variables"
 
@@ -71,7 +72,7 @@ $black: #2b2523
     line-height: 1.25
     background-color: #fff
     border-radius: .25rem
-    boder-color: #434343
+    border-color: #434343
     text-decoration: none
     font-weight: 700
     color: #434343
@@ -162,3 +163,4 @@ $menu-label-color: $white-ter
     text-align: center;
     max-width: 70%;
     margin: 0 0 1em;
+    background-color: #434343
